--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -18,6 +19,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
