--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
+    "@ramonak/react-progress-bar": "^5.2.0",
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.22.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "scrollspy": "^1.6.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
